[MSE] SourceBuffer.buffered should return the same object if it's not modified https://bugs.webkit.org/show_bug.cgi?id=253883 rdar://106695698

Reviewed by Eric Carlson.

Per spec https://w3c.github.io/media-source/#dom-sourcebuffer-buffered
step 5. "If intersection ranges does not contain the exact same range
information as the current value of this attribute, then update the current
value of this attribute to intersection ranges."

A change following a bug lodged in https://www.w3.org/Bugs/Public/show_bug.cgi?id=27790

* LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource-buffered-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/media-source/mediasource-buffered.html:
* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::buffered):
(WebCore::SourceBuffer::buffered const): Deleted.
* Source/WebCore/Modules/mediasource/SourceBuffer.h:

Canonical link: https://commits.webkit.org/261848@main